<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeMenu"
            android:title="@string/home"
            android:icon="@drawable/home"/>

        <item
            android:id="@+id/userProfile"
            android:title="@string/userProfile"
            android:icon="@drawable/user1"/>

        <item
            android:id="@+id/setStepGoal"
            android:title="@string/stepGoal"
            android:icon="@drawable/goal" />

        <item
            android:id="@+id/stepCounter"
            android:title="@string/summary"
            android:icon="@drawable/summary"/>

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/aboutUs"
            android:title="About Us"
            android:icon="@drawable/about" />
    </group>


</menu>