<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DisplayProfile">

        <ImageView
            android:id="@+id/ageImageView"
            android:layout_width="55dp"
            android:layout_height="80dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="59dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/age1" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main" />


        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/height"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightImageView" />

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/weight"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightImageView" />

        <TextView
            android:id="@+id/ageDisplay"
            android:layout_width="170dp"
            android:layout_height="85dp"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="60dp"
            android:hint="@string/age"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/heightDisplay"
            android:layout_width="170dp"
            android:layout_height="85dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="60dp"
            android:hint="@string/height"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageDisplay" />

        <TextView
            android:id="@+id/weightDisplay"
            android:layout_width="170dp"
            android:layout_height="85dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="60dp"
            android:hint="@string/weight"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightDisplay" />

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="163dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="160dp"
            android:onClick="onEditUserProfile"
            android:text="@string/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightDisplay"
            tools:ignore="OnClick,UsingOnClickInXml" />

        <ImageView
            android:id="@+id/heightImageView"
            android:layout_width="52dp"
            android:layout_height="74dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageImageView"
            app:srcCompat="@drawable/height" />

        <ImageView
            android:id="@+id/weightImageView"
            android:layout_width="52dp"
            android:layout_height="68dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightTextView"
            app:srcCompat="@drawable/weight" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_nav"
        style="@style/Widget.Custom.NavigationView" />
</androidx.drawerlayout.widget.DrawerLayout>
